Disable pitch gesture

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         container: 'map', // container ID
         style: 'mapbox://styles/mapbox/streets-v11', // style URL
         center: [-74.5, 40], // starting position [lng, lat]
-        zoom: 9 // starting zoom
+        zoom: 9, // starting zoom
+        touchPitch: false, // disable pitch gesture
     });
 
     // Add geolocate control to the map.
