Add zoom and rotation controls

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             showUserHeading: true
         })
     );
+
+    // Add zoom and rotation controls to the map.
+    map.addControl(new mapboxgl.NavigationControl());
 </script>
 
 </body>
