Add most available content to building info popup
Name, photo, building number, address, city, state
And when they exist: alerts, description, website

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
             bottom: 0;
             width: 100%;
         }
+
+        .popup {
+            display: flex;
+            align-items: center;
+        }
+
+        .centerText {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
