Add controls to fly to NB/NWK/CMDN

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         .centerText {
             text-align: center;
         }
+
+        .flyToCampusButton {
+            width: 100% !important;
+            padding: 5px !important;
+            font-weight: bold !important;
+        }
     </style>
 </head>
 <body>
