Move styles to styles.css

--- a/index.html
+++ b/index.html
@@ -7,34 +7,7 @@
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mapbox/polyline@1.1.1/src/polyline.min.js"></script>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        #map {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            width: 100%;
-        }
-
-        .popup {
-            display: flex;
-            align-items: center;
-        }
-
-        .centerText {
-            text-align: center;
-        }
-
-        .flyToCampusButton {
-            width: 100% !important;
-            padding: 5px !important;
-            font-weight: bold !important;
-        }
-    </style>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
 <div id="map"></div>
