--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mapbox/polyline@1.1.1/src/polyline.min.js"></script>
     <link href="styles.css" rel="stylesheet">
+    <link href="icon.png" rel="icon" sizes="192x192" type="image/png">
     <link href="manifest.webmanifest" rel="manifest">
 </head>
 <body>
