Replace datalist with jQuery UI Autocomplete widget

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mapbox/polyline@1.1.1/src/polyline.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+    <link href="https://code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
     <link href="images/icon.png" rel="icon" sizes="192x192" type="image/png">
     <link href="manifest.webmanifest" rel="manifest">
