Let user pick which routes are shown

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
 <div id="map"></div>
+<div id="dialog" title="Routes"></div>
 <script src="const.js"></script>
 <script src="map.js"></script>
 </body>
