Add TransLoc announcements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div id="map"></div>
-<div id="dialog" title="Routes"></div>
+<div id="dialog"></div>
 <script src="const.js"></script>
 <script src="map.js"></script>
 </body>
